Fixing Minimization Error In Dark Mode (#620)
* Fixed Dark Mode Minimization Error

--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -88,7 +88,7 @@
   transform: translate(-100%, 0px) !important;
 }
 
-.dropdown-submenu:hover .drp-menu{
+.dropdown-submenu:hover .drp-menu {
   display: block !important;
 }
 
@@ -110,4 +110,25 @@
   background-color: #4e6fa16c !important;
   border-color: #ffffff00 !important;
   border-radius: 4px !important;
+}
+
+#toggler-left {
+  display: inline-flex;
+  position: absolute;
+  left: 5rem;
+}
+
+#sun-icon {
+  width: 0.7rem;
+  height: 1.6rem;
+  margin-right: 1.24rem;
+}
+
+#dark-toggler {
+  margin-top: 0.18rem;
+}
+
+#moon-icon {
+  width: 1.1rem;
+  height: 1.9rem;
 }
